--- a/styles/home.css
+++ b/styles/home.css
@@ -18,14 +18,21 @@ header img{
     color: black;
     font-weight: 600;
 }
-
+.hero{
+    width: 100%;
+}
 .hero img{
     width: 100%;
     clip-path:  polygon(0 10%, 100% 0, 100% 85%, 0 100%);
      
 }
 .hero h1{
+    position: fixed;
+    top: 30%;
+    left: 27%;
+    text-align: center;
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
     font-size: 20px;
+    color: white;
 }
