--- a/styles/home.css
+++ b/styles/home.css
@@ -23,7 +23,7 @@ header img{
 }
 .hero img{
     width: 100%;
-    clip-path:  polygon(0 10%, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 10%, 100% 0, 100% 85%, 0 100%);
      
 }
 .hero h1{
@@ -31,8 +31,7 @@ header img{
     top: 30%;
     left: 27%;
     text-align: center;
-    font-family: "Open Sans", sans-serif;
-    font-weight: 600;
-    font-size: 20px;
+    font-family: "Sofia", cursive;
+    font-size: 30px;
     color: white;
 }
