--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Sofia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
+
 /*
 font-family: "Open Sans", sans-serif;
   font-family: "Montserrat", sans-serif;
-  font-family: "Pacifico", cursive;
 */
 
 *{
