--- a/styles/home.css
+++ b/styles/home.css
@@ -5,14 +5,15 @@
 .hero img{
     width: 100%;
     clip-path: polygon(0 10%, 100% 0, 100% 85%, 0 100%);
-     
+    z-index: 0;
 }
 .hero h1{
-    position: fixed;
+    position: absolute;
     top: 30%;
     left: 27%;
     text-align: center;
     font-family: "Sofia", cursive;
     font-size: 30px;
     color: white;
+    z-index: 1000;
 }
