--- a/styles/praias.css
+++ b/styles/praias.css
@@ -21,7 +21,6 @@
 .info li{
     list-style: none;
     margin-bottom: 5px;
-    margin-right: 50px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -30,4 +29,17 @@
 .info li img{
     width: 20px;
     height: 20px;
+}
+button{
+    padding: 6px 20px;
+    background-color: rgb(69, 69, 255);
+    color: white;
+    border: 0;
+    border-radius: 15px;
+    font-size: 16px;
+    margin-top:60px;
+}
+span{
+    color: whitesmoke;
+    font-family:"Montserrat", sans-serif;
 }
