--- a/styles/global.css
+++ b/styles/global.css
@@ -28,3 +28,20 @@ header img{
   color: black;
   font-weight: 600;
 }
+
+footer{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  padding: 20px;
+  background-color: rgb(241, 241, 241);
+}
+footer img{
+  width: 40%;
+}
+footer h1{
+  font-family: "Open Sans", sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+}
