--- a/styles/sobrenos.css
+++ b/styles/sobrenos.css
@@ -31,6 +31,32 @@
     font-weight: 500;
     color: black;
 }
+#projeto{
+    margin-top: 30px;
+    padding: 20px 20px;
+    background-color: rgb(252, 252, 252);
+
+}
+#projeto header{
+    font-family: "Montserrat", sans-serif;
+    font-size: 30px;
+}
+
+#projeto h2{
+    font-family: "Open Sans", sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+}
+#projeto div{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    align-items: center;
+}
+#projeto div img{
+    width: 100%;
+    border-radius: 10px;
+}
 a img{
     width: 20px;
 }
