--- a/styles/praias.css
+++ b/styles/praias.css
@@ -7,9 +7,15 @@
     display: flex;
     flex-direction: row;
     align-items:flex-start;
-
+    margin-bottom:10px;
+    width: 700px;
     height:280px ;
 
+
+}
+.info h1{
+    font-family:"Montserrat", sans-serif;
+    margin-right:5px ;
 
 }
 .icon{
@@ -18,12 +24,18 @@
     border-radius: 10px;
     margin-right: 10px;
 }
+.info p{
+    word-break: normal;
+    font-family:"Open Sans", sans-serif;
+    margin-top: 4px;
+}
 .info li{
     list-style: none;
     margin-bottom: 5px;
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-family:"Open Sans", sans-serif ;
     
 }
 .info li img{
@@ -33,13 +45,16 @@
 button{
     padding: 6px 20px;
     background-color: rgb(69, 69, 255);
-    color: white;
     border: 0;
     border-radius: 15px;
     font-size: 16px;
-    margin-top:60px;
-}
-span{
+    margin-top:40px;
     color: whitesmoke;
     font-family:"Montserrat", sans-serif;
+}
+button:hover{
+    transition: 0.5s;
+    background-color: chartreuse;
+    color: black;
+    
 }
