--- a/styles/sobrenos.css
+++ b/styles/sobrenos.css
@@ -8,10 +8,9 @@
 .participantes-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
     justify-content: center;
     margin: 40px 10px;
-    gap: 90px;
+    gap: 50px;
 }
 .participante{
     display: flex;
@@ -61,8 +60,36 @@ a img{
     width: 20px;
 }
 
-.noma{
-    border-radius: 50%;
+.img-p{
+    border-radius: 10px;
     width: 150px;
     height: 150px;
+}
+
+@media screen and (max-width: 991px){
+    #projeto div{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+        justify-items: center;
+    }
+    #projeto div img{
+        width: 80%;
+        border-radius: 10px;
+    }
+}
+
+@media screen and (max-width: 767px){
+    .participantes-container{
+        gap: 0px;
+    }
+    .participante a{
+        align-items: center;
+    }
+}
+@media screen and (max-width: 575px){
+    .img-p{
+        width: 80%;
+        height: 80%;
+    }
 }
