--- a/styles/global.css
+++ b/styles/global.css
@@ -30,6 +30,8 @@ header img{
 }
 
 footer{
+  position: relative;
+  bottom:0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
