--- a/styles/praiaGlobal.css
+++ b/styles/praiaGlobal.css
@@ -3,25 +3,30 @@ main{
 }
 .carousel-container {
     position: relative;
-    width: 70%; /* Largura de cada painel */
+    width: 50%; /* Largura de cada painel */
     margin: 50px auto;
     overflow: hidden; /* Adicionando overflow: hidden para esconder conteúdo que ultrapassa a largura */
-    background-color: #e0e0e0; /* Cor de fundo do contêiner do carrossel */
+    background-color: #4285f4; /* Cor de fundo do contêiner do carrossel */
+    border: 1px solid #ccc;
+    border-radius: 10px;
 }
 
 .carousel {
     display: flex;
     transition: transform 0.5s ease-in-out;
     width: 300%;
+  
 }
 
 .painel img{
     width:100% ;
     height: 400px;
+    
+    
 }
 .painel {
-    width: 1100px;
-    height: 400px;
+    width: 50%;
+    height: 10%;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -34,9 +39,7 @@ main{
 
 }
 
-.content {
-    padding: 20px;
-}
+
 
 .seta {
     position: absolute;
@@ -65,4 +68,15 @@ main{
 .infoPraia{
     border: 1px solid rgb(216, 216, 216);
     border-radius: 5px;
+}
+aside{
+    display: flex;
+    margin-bottom:10px;
+    margin-right: 30px;
+    width: 80%;
+    padding: 8px;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color:rgb(241, 241, 241) ;
+    margin: 50px auto;
 }
