--- a/styles/praias.css
+++ b/styles/praias.css
@@ -37,8 +37,8 @@ main{
 }
 .box-praia{
 
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
     align-items:flex-start;
     margin-bottom:10px;
     margin-right: 30px;
@@ -92,4 +92,22 @@ button:hover{
     color: black;
     cursor: pointer;
     
+}
+@media screen and (max-width: 991px){
+    main{
+        grid-template-columns: 1fr;
+    }
+    .filtro{
+        display: none;
+    }
+}
+@media screen and (max-width: 767px){
+    .box-praia{
+        grid-template-columns: 1fr;
+        width: 100%;
+        margin-right: 0;
+    }
+    .icon{
+        width: 100%;
+    }
 }
