--- a/styles/praiaGlobal.css
+++ b/styles/praiaGlobal.css
@@ -71,12 +71,15 @@ main{
 }
 aside{
     display: flex;
+    flex-direction: column;
     margin-bottom:10px;
     margin-right: 30px;
-    width: 80%;
+    width: 60%;
     padding: 8px;
     border: 1px solid black;
     border-radius: 10px;
-    background-color:rgb(241, 241, 241) ;
     margin: 50px auto;
+}
+.coments{
+    background-color: aquamarine;
 }
