--- a/styles/home.css
+++ b/styles/home.css
@@ -47,6 +47,27 @@
     font-size: 18px;
     font-weight: 400;
 }
+.formulario{
+    font-family:"Montserrat", sans-serif ;
+    font-size: 30px;
+    text-align: center;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    margin: 20px 30%;
+    gap: 10px;
+}
+input{
+    padding: 10px;
+    border: 1px solid rgb(163, 163, 163);
+    border-radius: 10px;
+}
+textarea{
+    padding: 10px;
+    border: 1px solid rgb(163, 163, 163);
+    border-radius: 10px;
+}
 
 @media screen and (max-width: 575px){
     .mapa img{
