--- a/styles/home.css
+++ b/styles/home.css
@@ -58,6 +58,12 @@ form{
     margin: 20px 30%;
     gap: 10px;
 }
+#form button{
+    padding: 10px;
+    background-color: white;
+    border: 1px solid rgb(163, 163, 163);
+    border-radius: 10px;
+}
 input{
     padding: 10px;
     border: 1px solid rgb(163, 163, 163);
